--- a/client/shared.sass
+++ b/client/shared.sass
@@ -1,6 +1,7 @@
 @import "node_modules/bootstrap/scss/bootstrap"
 
 $mobile: 550px
+$desktop: 551px
 $base-color: #008656 // For contrast against white
 $base-color-light: lighten($base-color, 50) // For contrast against black
 $secondary-color: #fdf4bb
@@ -157,12 +158,3 @@ span.Logo
         padding-left: 5px
         list-style-position: outside
         margin-bottom: 1em
-
-// Account for fixed header height when clicking on anchor links (e.g. references)
-// https://stackoverflow.com/questions/10732690/offsetting-an-html-anchor-to-adjust-for-fixed-header
-[id]::before
-    content: ''
-    display: block
-    height: 60px
-    margin-top: -60px
-    visibility: hidden
